<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">BluetoothSign</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>


    <string name="theme_search_button">搜索</string>
    <string name="theme_title_textview">签到信息</string>
    <string name="theme_background_buttton">返回</string>
    <string name="face">表情</string>


    <string name="sendMsg_EditText_hint">输入内容</string>
    <string name="sendMsg_Button_text">发送</string>
    <string name="bt_not_enabled_leaving">蓝牙服务未开启，退出中。。。</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>
    <string name="title_connecting">connecting...</string>
    <string name="not_connected">请先搜索并连接对象</string>
    <!-- Options Menu -->
    <string name="send_file"></string>
    <!-- Options Menu -->
    <string name="insecure_connect">搜索对象</string>
    <string name="discoverable">标记自己</string>
    <string name="startService">打开蓝牙</string>
    <!-- DeviceListActivity -->
    <string name="title_paired_devices">已连接对象</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">搜索对象</string>
    <string name="select_device">寻找可连接对象</string>
    <string name="none_found">未找到可连接对象</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="scanning">scanning for devices...</string>

    <string name="on">Turn On</string>
    <string name="off">Turn Off</string>
    <string name="change">Change Name</string>
    <string name="compare">Compare Name</string>
    <string name="input">Input ID</string>
    <string name="Visible">重新获取被检测权限</string>
    <string name="List">List Paired Devices</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="stu_id">Your ID: Please press Input ID to enter</string>
    <string name="choose_role">请选择你的身份</string>
    <string name="Student">学生</string>
    <string name="Teacher">教师</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="tea_hello">Hello, teacher!</string>
    <string name="list_All">Scan available devices</string>
    <string name="shower_stop">stop scan</string>
    <string name="shower_not_bind">not bind yet</string>
    <string name="click_advice">点击上方图片打开权限</string>
    <string name="Data">数据</string>
    <string name="GetSign">开始签到</string>
    <string name="changeid">change</string>
    <string name="send">send</string>
    <string name="choose_search_button">搜索课程</string>
    <string name="choose_chatroom_buttton">签到信息</string>
    <string name="choose_title_textview">" "</string>
    <string name="lobby_title_textview">蓝牙签到系统</string>
    <string name="lobby_left_button">左</string>
    <string name="lobby_right_button">右</string>
</resources>