<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/stulayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <RelativeLayout
        android:id="@+id/stu_MessageBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/green">

        <ImageButton
            android:id="@+id/stu_imgButton"
            android:layout_width="@dimen/showimg_ImageButton_size"
            android:layout_height="@dimen/showimg_ImageButton_size"
            android:layout_marginLeft="@dimen/showimg_ImageButton_marginLeft"
            android:contentDescription="@string/face"
            android:background="@color/green"/>
        <!--            android:src="@drawable/ib_face"   -->

        <EditText
            android:id="@+id/stu_MessageText"
            android:layout_width="@dimen/sendMsg_EditText_width"
            android:layout_height="@dimen/sendMsg_EditText_height"
            android:layout_marginLeft="@dimen/sendMsg_EditText_marginLeft"

            android:textSize="@dimen/sendMsg_EditText_textSize"
            android:background="@color/green"/>
        <!--            android:hint="@string/sendMsg_EditText_hint"-->

        <Button
            android:id="@+id/stu_MessageButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/sendMsg_Button_height"
            android:layout_alignParentRight="true"

            android:textSize="@dimen/sendMsg_Button_textSize"
            android:background="@color/green"/>
        <!--            android:text="@string/sendMsg_Button_text"-->

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/stu_toolbar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/green"
        android:elevation="5dp"
        >
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
        <TextView
            android:id="@+id/stu_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:text="学号: 00000000"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/stu_button_change_id"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="8dp"
            android:layout_gravity="center"
            android:layout_toRightOf="@id/stu_id"
            android:onClick="inputName"
            android:background="@drawable/renew"
            />

    </LinearLayout>

    <ScrollView
        android:id="@+id/stu_scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="80dp"
            >


            <!--            <TextView-->
            <!--                android:id="@+id/stu_id"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="@string/stu_id" />-->
            <!--    蓝牙图片-->
            <RelativeLayout
                android:id="@+id/stu_rl_bluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal">

                <RelativeLayout
                    android:id="@+id/stu_layout_ser_ble"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/bg_ble_progress">

                    <ProgressBar
                        android:id="@+id/stu_progress_ser_bluetooth"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:indeterminateDrawable="@drawable/rotate_progressbar"
                        android:visibility="invisible" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/stu_iv_ser_ble_status"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/icon_ble_on"
                    android:onClick="openBluetooth"
                    />

                <TextView
                    android:id="@+id/stu_tv_ser_ble_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/shower_stop"
                    android:textColor="@color/green"
                    android:textSize="15sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/stu_tv_click_advice"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/stu_layout_ser_ble"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:text="@string/click_advice"
                    android:textColor="@color/green" />
            </RelativeLayout>
            <!--    pic end    -->

            <Button
                android:id="@+id/stu_button_get_vis"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_normal"
                android:textColor="@color/white"
                android:onClick="visible"
                android:text="@string/Visible" />

<!--            <Button-->
<!--                android:id="@+id/button_list"-->
<!--                android:layout_width="170dp"-->
<!--                android:layout_height="50dp"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:background="@drawable/btn_normal"-->
<!--                android:textColor="@color/white"-->
<!--                android:onClick="listConnected"-->
<!--                android:text="@string/List" />-->
            <Button
                android:id="@+id/stu_button_get_data"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_normal"
                android:textColor="@color/white"
                android:onClick="getData"
                android:text="@string/Data" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
